rust/macros/tests/ui/fail/duplicate_roles.stderr
error: duplicate role 'A'
 --> tests/ui/fail/duplicate_roles.rs:5:18
  |
5 |         roles A, A;
  |                  ^
